@@ -15,9 +15,11 @@ stopwords = perlcriticrc
 stopwords = perltidyrc
 stopwords = toml
 use_github_issues = 1
+-remove = DROLSKY::BundleAuthordep
 -remove = Test::Synopsis
 
 [MetaNoIndex]
+package = Dist::Zilla::Plugin::DROLSKY::BundleAuthordep
 package = Dist::Zilla::Plugin::DROLSKY::Contributors
 package = Dist::Zilla::Plugin::DROLSKY::Git::CheckFor::CorrectBranch
 package = Dist::Zilla::Plugin::DROLSKY::License
